--- a/modules/openthread/CMakeLists.txt
+++ b/modules/openthread/CMakeLists.txt
@@ -386,6 +386,10 @@ if(CONFIG_OPENTHREAD_COPROCESSOR_VENDOR_HOOK_SOURCE)
   set(OT_NCP_VENDOR_HOOK_SOURCE ${CONFIG_OPENTHREAD_COPROCESSOR_VENDOR_HOOK_SOURCE} CACHE STRING "NCP vendor hook source file name" FORCE)
 endif()
 
+if(CONFIG_OPENTHREAD_DNS_OVER_TCP)
+  set(OT_DNS_OVER_TCP ${CONFIG_OPENTHREAD_DNS_OVER_TCP} CACHE STRING "Configure DNS over TCP functionality" FORCE)
+endif()
+
 # Zephyr logging options
 
 if(CONFIG_LOG_BACKEND_SPINEL)
